# ollama_ros2

./: README.md  package.xml  setup.cfg  setup.py
launch/: ollama_node.launch.py
ollama_ros2/: __init__.py  ollama_node.py
resource/: ollama_ros2
