<?xml version="1.0"?>
<package format="3">
  <name>ollama_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 node bridging std_msgs/String to Ollama local LLM via HTTP.</description>
  <maintainer email="marton@nowtech.hu">nilseuropa</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
